refactor(Separator): 구분후 Number List를 반환 및 Numbers 반환하도록 리펙토링
Separator들 테스트 코드 수정